# setdistance

./: 2  Cargo.toml  README.md  \  counters.md  main.py
PythonEuclidean/: compute.py  counter.py  delete  delete.md  hamming.py  main.py  pivot.py  pivot3d.py  plot.py
PythonEuclidean/tex/: exp.fdb_latexmk  exp.fls  exp.tex
src/: axioms.rs  distances.rs  main.rs  strict_implication.rs  utils.rs  visualitation.rs
tikz/: tikz.fdb_latexmk  tikz.fls  tikz.tex
