[package]
name = "setdistance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.10.5"
distance = "0.4.0"
rand = "0.8.5"
egui_graphs="0.13.3"
egui = "0.23"
eframe = "0.23"
petgraph = "0.6"
petgraph-evcxr = "*"
tempfile = "*"
